--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://localhost/mysql
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.config-location: classpath:mybatis-config.xml
