add reactjs config, grunt config

--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js && grunt ",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
@@ -90,5 +90,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.2",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0"
   }
 }
