--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-mybatis.config-location: classpath:mybatis-config.xml
+mybatis.config-location=classpath:mybatis-config.xml
